Fixed warp flaky tests
(cherry picked from commit 8ccdd0b145705994162af05eb640c74f0fad0f59)